# renalprog

./: .gitignore  404.html  LICENSE  MIGRATION_PLAN.md  Makefile  README.md  environment.yml  index.html  objects.inv  pyproject.toml  pytest.ini  quick_setup.sh  quickstart_example.py  requirements-test-minimal.txt  requirements.txt  setup.cfg  sitemap.xml
.github/workflows/: tests.yml
CLASSIFICATION/: index.html
ENRICHMENT_ANALYSIS/: index.html
ENRICHMENT_QUICK_REF/: index.html
GSEA_INSTALLATION/: index.html
PATHWAY_HEATMAP/: index.html
R_ANALYSIS/: index.html
TRAJECTORIES/: index.html
acknowledgments/: index.html
advanced/ENRICHMENT_ANALYSIS/: index.html
advanced/GSEA_INSTALLATION/: index.html
advanced/PATHWAY_HEATMAP/: index.html
advanced/R_ANALYSIS/: index.html
advanced/architecture/: index.html
advanced/custom-models/: index.html
advanced/gpu/: index.html
advanced/performance/: index.html
advanced/r-integration/: index.html
api/: index.html
api/classification/: index.html
api/config/: index.html
api/dataset/: index.html
api/enrichment/: index.html
api/features/: index.html
api/models/: index.html
api/plots/: index.html
api/prediction/: index.html
api/training/: index.html
api/trajectories/: index.html
api/utils/: index.html
citation/: index.html
contributing/code-style/: index.html
contributing/development/: index.html
contributing/guidelines/: index.html
contributing/testing/: index.html
docs/: GSEA_SETUP_GUIDE.md  README.md  R_QUICK_REF.md  R_SETUP_GUIDE.md  STEP6_ENRICHMENT_IMPLEMENTATION.md  mkdocs.yml  requirements.txt
docs/docs/: CLASSIFICATION.md  ENRICHMENT_ANALYSIS.md  ENRICHMENT_QUICK_REF.md  GSEA_INSTALLATION.md  PATHWAY_HEATMAP.md  TRAJECTORIES.md  acknowledgments.md  citation.md  index.md  license.md
docs/docs/advanced/: ENRICHMENT_ANALYSIS.md  GSEA_INSTALLATION.md  PATHWAY_HEATMAP.md  R_ANALYSIS.md  (+1 more)
getting-started/: index.html
license/: index.html
renalprog/: __init__.py  config.py  dataset.py  enrichment.py  features.py  plots.py  tests
renalprog/modeling/: __init__.py  checkpointing.py  predict.py  train.py
renalprog/utils/: __init__.py
reproducibility/: index.html
reproducibility/data-preparation/: index.html
reproducibility/pipeline/: index.html
reproducibility/requirements/: index.html
reproducibility/results/: index.html
reproducibility/troubleshooting/: index.html
scripts/: quickstart.py
scripts/enrichment/: pipeline.sh  py_deseq.py  py_deseq_real.py  trajectory_formatting.py
scripts/pipeline_steps/: 1_data_processing.py  2_models.py  3_check_reconstruction.py  4_trajectories.py  5_classification.py  6_enrichment_analysis.py  6b_generate_pathway_heatmap.py  README.md
scripts/r_analysis/: README.md  USAGE_GUIDE.md  differential_expression.R  gene_enrichment.R  install_r_packages.R  requirements.txt
search/: search_index.json
tests/: conftest.py  test_dataset.py  test_features.py  test_modeling.py
tutorials/: index.html
tutorials/complete-pipeline/: index.html
tutorials/data-requirements/: index.html
tutorials/installation/: index.html
tutorials/pretrained-models/: index.html
tutorials/quickstart/: index.html
tutorials/step1-data-processing/: index.html
tutorials/step2-vae-training/: index.html
tutorials/step3-reconstruction/: index.html
tutorials/step4-trajectories/: index.html
tutorials/step5-classification/: index.html
tutorials/step6-enrichment/: index.html
tutorials/visualization/: index.html
(+27 files in other folders)
